fix images so that they always align to the center

--- a/public/css/mainStyle.css
+++ b/public/css/mainStyle.css
@@ -11,7 +11,7 @@
 	
 }
 .articleimg {
-	align: center;
+	margin: auto;
 	max-height: 270px;
 }
 .link {
